<resources>
    <string name="app_name">OpenERP</string>
    <string name="title_activity_main">OpenERP</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="check_upgrade">Check Upgrade</string>
    <string name="add_account">新帐号</string>
    <string name="refresh_details">刷新</string>
    <string name="mark_as_unread">标为未读</string>
    <string name="mark_as_read">标为已读</string>
    <string name="archive">存档</string>
    <string name="mark_as_todu">标为待办事项</string>
    <string name="unmark_from_todu">取消待办事项</string>
    <string name="compose_message">发消息</string>
    <string name="search">搜索</string>
    <string name="add">新增</string>
    <string name="add_attachment">添加附件</string>
    <string name="attach_image">图片</string>
    <string name="attach_file">文件</string>
    <string name="send">发送</string>
    <string name="get_from_server">从服务器接收</string>
    <string name="user_name">用户名</string>
    <string name="login_name">登录名</string>
    <string name="database">数据库</string>
    <string name="timezone">时区</string>
    <string name="waiting_for_sync_to_start">等待同步</string>
    <string name="your_messages_will_appear_shortly">消息正在加载</string>
    <string name="subject">主题</string>
    <string name="body">正文</string>
    <string name="dummy_name">别名</string>
    <string name="login">登录</string>
    <string name="logout">退出</string>
    <string name="delete">删除</string>
    <string name="server_url">您的服务器url</string>
    <string name="user_login">用户登录名</string>
    <string name="title">标题</string>
    <string name="provide_your_port">url请附带端口，默认为8069</string>
    <string name="secure_connection">使用https连接</string>
    <string name="load_more">查看更多</string>
    <string name="add_follower">添加关注</string>
    <string name="idea_fragment">创意板块</string>
    <string name="unfollow">取消关注</string>
    <string name="join">加入</string>
    <string name="group_name">组名</string>
    <string name="loading">玩命加载中</string>
    <string name="attachments">附件</string>
    <string name="to">发给：</string>
    <string name="admin">系统管理员</string>
    <string name="message">消息</string>
    <string name="user_email">用户邮箱</string>
    <string name="save">保存</string>
    <string name="cancel">取消</string>
    <string name="more">更多</string>
    <string name="invite">邀请</string>
    <string name="forward_as_email">使用邮件发送</string>
    <string name="mark_as_done">标为已办</string>
    <string name="mark_as_open">标为开启</string>
    <string name="edit_note">编辑笔记</string>
    <string name="delete_note">删除笔记</string>
    <string name="create">创建</string>
    <string name="compose_note">编写笔记</string>
    <string name="enable_sync">开启同步</string>
    <string name="sync_interval">同步间隔</string>
    <string name="sync_data_limit">同步大小限制</string>
    <string name="contact_sync">联系人同步</string>
    <string name="sync_local_partners">同步手机联系人到服务器</string>
    <string name="sync_server_partners">同步服务器客户到手机</string>
    <string name="logo_description">OpenERP</string>
    <string name="account_title">Setup Your OpenERP Server</string>
    <string name="account_description">Provide your OpenERP 7.0 Server URL and click on Continue button to test Connection and go next step.</string>
    <string name="account_edit_server_url">Server URL</string>
    <string name="account_edit_server_port">Port Number (If any)</string>
    <string name="account_continue_button">Continue</string>
    <string name="account_login_button">Login</string>
    <string name="login_title">Config Your OpenERP Login Details</string>
    <string name="login_description">Select your working database and provide your username and password to access.</string>
    <string name="login_select_database">Select Database</string>
    <string name="login_edit_username">Username</string>
    <string name="login_edit_password">Password</string>
    <string name="action_settings">Settings</string>
    <string name="syncwizard_title">Enable/Disable your Sync Settings</string>
    <string name="syncwizard_description">Select your auto sync option so application will get up to-date automatically.</string>
    <string name="account_sync_wizard_button">Continue</string>
    <string name="message_inbox_all_read"><b>Good Job!</b> Your inbox is empty.\n \n

Your inbox contains private messages or emails sent to you as well as information related to documents or people you follow.</string>
    <string name="message_tome_all_read"><b>No private message.</b>\n\nThis list contains messages sent to you.</string>
    <string name="message_todo_all_read"><b>No todo.</b>\n\n

When you process messages in your inbox, you can mark some as todo. From this menu, you can process all your todo.</string>
    <string name="message_no_group_message">No message in this group.</string>
    <string name="message_waiting_for_sync_to_start">Waiting for Sync to Start</string>
    <string name="message_your_message_will_appear_shortly">Your messages will appear shortly</string>
    <string name="message_group_title">MESSAGES</string>
    <string name="read_all_messages">Woohoo! You\&apos;ve read all the messages in your inbox.</string>
    <string name="message_drawer_item_inbox">Inbox</string>
    <string name="message_drawer_item_tome">to: me</string>
    <string name="message_drawer_item_todo">To do</string>
    <string name="message_drawer_item_archives">Archives</string>
    <string name="compose_note_tags">Tags</string>
    <string name="compose_note_stages">Stages</string>
    <string name="compose_note_description">Note</string>
    <string name="imgview_note_add_tags">This will open the dailogbox to select tags</string>
    <string name="detail_note_name">Note Name</string>
    <string name="detail_note_memo">Note Memo</string>
    <string name="expense_inbox_all_read"><b>Good Job!</b> Your inbox is empty.\n \n

Your inbox contains private messages or emails sent to you as well as information related to documents or people you follow.</string>
    <string name="expense_todo_all_read"><b>No todo.</b>\n\n

When you process messages in your inbox, you can mark some as todo. From this menu, you can process all your todo.</string>
    <string name="expense_waiting_for_sync_to_start">Waiting for Sync to Start</string>
    <string name="expense_your_expense_will_appear_shortly">Your messages will appear shortly</string>
    <string name="expense_group_title">EXPENSES</string>
    <string name="expense">expense</string>
    <string name="read_all_expenses">Woohoo! You\&apos;ve read all the expenses in your inbox.</string>
    <string name="expense_draw_item_inbox">Inbox</string>
    <string name="expense_draw_item_archives">Archives</string>
    <string name="voucher_inbox_all_read"><b>Good Job!</b> Your inbox is empty.\n \n

Your inbox contains private vouchers or emails sent to you as well as information related to documents or people you follow.</string>
    <string name="voucher_todo_all_read"><b>No todo.</b>\n\n

When you process voucher in your inbox, you can mark some as todo. From this menu, you can process all your todo.</string>
    <string name="voucher_waiting_for_sync_to_start">Waiting for Sync to Start</string>
    <string name="voucher_your_voucher_will_appear_shortly">Your messages will appear shortly</string>
    <string name="voucher_group_title">Vouchers</string>
    <string name="voucher">voucher</string>
    <string name="read_all_vouchers">Woohoo! You\&apos;ve read all the vouchers in your inbox.</string>
    <string name="voucher_draw_item_inbox">Inbox</string>
    <string name="voucher_draw_item_archives">Archives</string>
    <string name="label_purchase_order">Purchase Order</string>
    <string name="purchase_order_inbox_all_read"><b>Good Job!</b> Your inbox is empty.\n \n
Your inbox contains private messages or emails sent to you as well as information related to documents or people you follow.</string>
    <string name="purchase_order_todo_all_read"><b>No todo.</b>\n\n
When you process messages in your inbox, you can mark some as todo. From this menu, you can process all your todo.</string>
    <string name="purchase_order_waiting_for_sync_to_start">Waiting for Sync to Start</string>
    <string name="purchase_order_your_purchase_order_will_appear_shortly">Your messages will appear shortly</string>
    <string name="purchase_order_group_title">PURCHASES</string>
    <string name="purchase_order">Purchase Order</string>
    <string name="read_all_purchase_orders">Woohoo! You\&apos;ve read all the purchase order in your inbox.</string>
    <string name="purchase_order_draw_item_inbox">Inbox</string>
    <string name="purchase_order_draw_item_archives">Archives</string>
    <string name="settings_group_title">Settings</string>
    <string name="settings_drawer_item_profile">Profile</string>
    <string name="settings_drawer_item_general_setting">General Settings</string>
    <string name="settings_drawer_item_account">Account</string>
    <string name="settings_drawer_item_about_us">About us</string>
    <string-array name="syncInterval">
        <item name="5">Every 5 minutes</item>
        <item name="10">Every 10 minutes</item>
        <item name="20">Every 20 minutes</item>
        <item name="40">Every 40 minutes</item>
        <item name="60">Every 60 minutes</item>
        <item name="1440">Once in a day</item>
    </string-array>
    <string-array name="syncIntervalValues">
        <item name="5">5</item>
        <item name="10">10</item>
        <item name="20">20</item>
        <item name="40">40</item>
        <item name="60">60</item>
        <item name="1440">1440</item>
    </string-array>
    <string-array name="syncDataLimit">
        <item name="30">1 month old</item>
        <item name="60">2 months old</item>
        <item name="90">3 months old</item>
    </string-array>
    <string-array name="syncDataLimitValues">
        <item name="30">30</item>
        <item name="60">60</item>
        <item name="90">90</item>
    </string-array>
    <string name="about_Company_line1">Copyright © 2004-TODAY OpenERP SA. All Rights Reserved.</string>
    <string name="about_Company_line2">OpenERP is a trademark of the <a href="https://www.openerp.com/">OpenERP.com.</a></string>
    <string name="about_Company_line3">Licenced under the terms of <a href="http://www.gnu.org/licenses/agpl.html/">GNU Affero General Public License</a></string>
    <string name="about_Company_line4">For more information visit <a href="https://www.openerp.com/">OpenERP.com</a>.</string>
    <string name="app_version_name">Version</string>
    <string name="imgcontentDescription">OpenERP LOGO in upper portion of the screen</string>
    <string name="widget_company_logo">OpenERP logo</string>
    <string name="widget_notes_label">Notes</string>
    <string name="widget_notes_notification">00</string>
    <string name="widget_messages_label">Messages</string>
    <string name="widget_messages_notification">00</string>
    <string name="widget_compose_notes">OpenComposeNotes</string>
    <string name="title_cat_sync_settings">Sync Settings</string>
    <string name="title_screen_sync_settings">Sync Settings</string>
    <string name="summary_screen_sync_settings">Enable or disable data synchronization</string>
    <string name="title_cat_sync_interval">Sync Interval</string>
    <string name="title_list_sync_interval">Sync Interval</string>
    <string name="summary_sync_interval">Define how often synchronization will be performed</string>
    <string name="title_cat_sync_data_limit_settings">Data Sync Limit</string>
    <string name="title_list_sync_data_limit">Sync Data Limit</string>
    <string name="summary_sync_data_limit">Define how old data to be synchronized</string>
    <string name="title_cat_contact_sync_setting">Contact Sync</string>
    <string name="title_cbx_contact_sync_setting">Sync server partners</string>
</resources>